More Primefaces 8-11 upgrade. More to come...